fix(WikiEditor): 🐛 add flex-wrap: wrap and display: flex

--- a/skinStyles/extensions/WikiEditor/ext.wikiEditor.less
+++ b/skinStyles/extensions/WikiEditor/ext.wikiEditor.less
@@ -71,6 +71,8 @@
 
 	.group,
 	.section-secondary .group {
+		display: flex;
+		flex-wrap: wrap;
 		border-color: var( --border-color-base );
 	}
 
@@ -130,8 +132,6 @@
 
 	/* Groups */
 	.group {
-		flex-wrap: wrap;
-
 		/* Toolbar */
 		.label {
 			height: 38px;
